fix: crash when drag and dropping video elements
- fix a bug where drag and dropping video elements would crash the editor
- abstract error and load handlers so both image and video elements can use
- re-work image gallery behavior to peg max to three, and display a ...more button
- fix a bug where titlebar spacer was not always applied (note content on some notes would be too close to header)

Identified a few more gallery edge cases and, after being unable to come up with a satisfactory gallery styling fix in the allotted time, opting to just simplify to +more for anything > 3. Will revisit again, one day

--- a/src/typography.css
+++ b/src/typography.css
@@ -95,10 +95,6 @@ sup {
   top: -0.5em;
 }
 
-img {
-  border-style: none;
-}
-
 svg:not(:root) {
   overflow: hidden;
 }
@@ -254,14 +250,6 @@ body {
 
 img {
   max-width: 100%;
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 0.8125rem;
 }
 
 hgroup {
